--- a/window/index.html
+++ b/window/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-csp="">
 
 <head>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body ng-app="autoFuzzer" ng-controller="mainController" ngCloak>
+<body ng-app="autoFuzzer" ng-controller="mainController" ng-csp>
 
   <nav class="navbar navbar-inverse navbar-default">
     <div class="container">
@@ -23,7 +24,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a ng-click="changeLocation()">Results</a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +38,9 @@
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="router.js"></script>
+  <script src="services/urlList.js"></script>
   <script src="controllers/mainController.js"></script>
+  <script src="controllers/resultsController.js"></script>
 </body>
 
 </html>
