--- a/window/index.html
+++ b/window/index.html
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a ng-click="changeLocation()">Results</a></li>
+          <li><a href="#results">Results</a></li>
         </ul>
       </div>
     </div>
