--- a/window/index.html
+++ b/window/index.html
@@ -38,6 +38,7 @@
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="router.js"></script>
+  <script src="services/resultsList.js"></script>
   <script src="services/urlList.js"></script>
   <script src="controllers/mainController.js"></script>
   <script src="controllers/resultsController.js"></script>
