Add json editor to project

--- a/window/index.html
+++ b/window/index.html
@@ -2,7 +2,10 @@
 <html data-ng-csp="">
 
 <head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="node_modules/jsoneditor/dist/jsoneditor.css">
+  <link rel="stylesheet" href="public/angular-json-editor/angular-json-editor.css">
   <link rel="stylesheet" href="style/style.css" />
 </head>
 
@@ -36,6 +39,8 @@
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-route/angular-route.js"></script>
+  <script src="node_modules/jsoneditor/dist/jsoneditor.min.js"></script>
+  <script src="public/angular-json-editor/angular-json-editor.js"></script>
   <script src="app.js"></script>
   <script src="router.js"></script>
   <script src="services/urlList.js"></script>
