--- a/window/index.html
+++ b/window/index.html
@@ -21,12 +21,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Auto-Fuzzer</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
           <li><a href="#results">Results</a></li>
         </ul>
       </div>
@@ -34,6 +32,10 @@
   </nav>
 
   <div ng-view></div>
+
+  <div class="container">
+    <div class="footer"></div>
+  </div>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
