--- a/window/index.html
+++ b/window/index.html
@@ -25,7 +25,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#results">Results</a></li>
+          <li><a ng-click="startFuzzing(delay)">Results</a></li>
         </ul>
       </div>
     </div>
