Add results page; add empty batch

--- a/window/index.html
+++ b/window/index.html
@@ -46,6 +46,7 @@
   <script src="app.js"></script>
   <script src="router.js"></script>
   <script src="services/urlList.js"></script>
+  <script src="services/requestResult.js"></script>
   <script src="controllers/mainController.js"></script>
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
