--- a/window/index.html
+++ b/window/index.html
@@ -25,7 +25,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a ng-click="startFuzzing(delay)">Results</a></li>
+          <li><a ng-click="viewResults()">Results</a></li>
         </ul>
       </div>
     </div>
@@ -47,6 +47,7 @@
   <script src="router.js"></script>
   <script src="services/urlList.js"></script>
   <script src="services/requestResult.js"></script>
+  <script src="services/resultsCache.js"></script>
   <script src="controllers/mainController.js"></script>
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
