--- a/window/index.html
+++ b/window/index.html
@@ -6,32 +6,42 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="node_modules/jsoneditor/dist/jsoneditor.css">
   <link rel="stylesheet" href="public/angular-json-editor/angular-json-editor.css">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="style/style.css" rel="stylesheet" />
+  <link href="style/navbar-fixed-side.css" rel="stylesheet" />
 </head>
 
 <body ng-app="autoFuzzer" ng-controller="mainController" ng-csp>
 
-  <nav class="navbar navbar-inverse navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-          aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Auto-Fuzzer</a>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-3 col-lg-2">
+        <nav class="navbar navbar-inverse navbar-fixed-side">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Auto-Fuzzer</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><a ng-click="viewResults()">Results</a></li>
+                <li><a>History</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        </nav>
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a ng-click="viewResults()">Results</a></li>
-        </ul>
+      <div class="col-sm-9 col-lg-10">
+        <div ng-view></div>
       </div>
     </div>
-  </nav>
-
-  <div ng-view></div>
+  </div>
 
   <div class="container">
     <div class="footer"></div>
