Attack some preset injection attacks

--- a/window/index.html
+++ b/window/index.html
@@ -58,6 +58,7 @@
   <script src="services/urlList.js"></script>
   <script src="services/requestResult.js"></script>
   <script src="services/resultsCache.js"></script>
+  <script src="services/appConstants.js"></script>
   <script src="controllers/mainController.js"></script>
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
