Add beautification library

--- a/window/index.html
+++ b/window/index.html
@@ -53,6 +53,7 @@
 
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
   <script type="text/javascript" src="public/bower_components/angular-ui-ace/ui-ace.js"></script>
+  <script type="text/javascript" src="public/vkBeautify/vkbeautify.js"></script>
   
   <script src="app.js"></script>
   <script src="router.js"></script>
@@ -64,7 +65,6 @@
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
 
-  <script src="controllers/aceController.js"></script>
 </body>
 
 </html>
