--- a/window/index.html
+++ b/window/index.html
@@ -46,10 +46,10 @@
     </div>
   </div>
 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="node_modules/angular/angular.js"></script>
-  <script src="node_modules/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular/angular.js"></script>
+  <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
 
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
   <script type="text/javascript" src="public/bower_components/angular-ui-ace/ui-ace.js"></script>
