--- a/window/index.html
+++ b/window/index.html
@@ -50,13 +50,14 @@
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
-
+  
+  <!-- install as node modules -->
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
   <script type="text/javascript" src="public/bower_components/angular-ui-ace/ui-ace.js"></script>
   <script type="text/javascript" src="public/vkBeautify/vkbeautify.js"></script>
   
-  <script src="app.js"></script>
-  <script src="router.js"></script>
+  <script src="js/app.js"></script>-->
+  <script src="js/router.js"></script>
   <script src="services/urlList.js"></script>
   <script src="services/requestResult.js"></script>
   <script src="services/resultsCache.js"></script>
