--- a/window/index.html
+++ b/window/index.html
@@ -28,7 +28,7 @@
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                 <li><a ng-click="viewResults()">Results</a></li>
-                <li><a>History</a></li>
+                <li><a ng-click="viewHistory()">History</a></li>
               </ul>
             </div>
           </div>
@@ -61,10 +61,12 @@
   <script src="services/urlList.js"></script>
   <script src="services/requestResult.js"></script>
   <script src="services/resultsCache.js"></script>
+  <script src="services/requestHistory.js"></script>
   <script src="services/appConstants.js"></script>
   <script src="controllers/mainController.js"></script>
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
+  <script src="controllers/historyController.js"></script>
 
 </body>
 
