Convert attack selector to directive

--- a/window/index.html
+++ b/window/index.html
@@ -67,6 +67,7 @@
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
   <script src="controllers/historyController.js"></script>
+  <script src="directives/attack-selector.js"></script>
 
 </body>
 
