--- a/window/index.html
+++ b/window/index.html
@@ -50,6 +50,7 @@
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>
   
   <!-- install as node modules -->
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
@@ -67,6 +68,7 @@
   <script src="controllers/requestsController.js"></script>
   <script src="controllers/resultController.js"></script>
   <script src="controllers/historyController.js"></script>
+  <script src="controllers/modalController.js"></script>
   <script src="directives/attack-selector.js"></script>
 
 </body>
