--- a/window/index.html
+++ b/window/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html data-ng-csp="">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="style/style.css" rel="stylesheet" />
-  <link href="style/navbar-fixed-side.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style/style.css"/>
+  <link rel="stylesheet" href="style/navbar-fixed-side.css"/>
 </head>
-
 <body ng-app="autoFuzzer" ng-controller="mainController" ng-csp>
 
   <div class="container-fluid">
@@ -51,26 +49,24 @@
   <script type="text/javascript" src="node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>
-  
-  <!-- install as node modules -->
+
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
   <script type="text/javascript" src="public/bower_components/angular-ui-ace/ui-ace.js"></script>
   <script type="text/javascript" src="public/vkBeautify/vkbeautify.js"></script>
   
-  <script src="js/app.js"></script>-->
-  <script src="js/router.js"></script>
-  <script src="services/urlList.js"></script>
-  <script src="services/requestResult.js"></script>
-  <script src="services/resultsCache.js"></script>
-  <script src="services/requestHistory.js"></script>
-  <script src="services/appConstants.js"></script>
-  <script src="controllers/mainController.js"></script>
-  <script src="controllers/requestsController.js"></script>
-  <script src="controllers/resultController.js"></script>
-  <script src="controllers/historyController.js"></script>
-  <script src="controllers/modalController.js"></script>
-  <script src="directives/attack-selector.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>-->
+  <script type="text/javascript" src="js/router.js"></script>
+  <script type="text/javascript" src="services/urlList.js"></script>
+  <script type="text/javascript" src="services/requestResult.js"></script>
+  <script type="text/javascript" src="services/resultsCache.js"></script>
+  <script type="text/javascript" src="services/requestHistory.js"></script>
+  <script type="text/javascript" src="services/appConstants.js"></script>
+  <script type="text/javascript" src="controllers/mainController.js"></script>
+  <script type="text/javascript" src="controllers/requestsController.js"></script>
+  <script type="text/javascript" src="controllers/resultController.js"></script>
+  <script type="text/javascript" src="controllers/historyController.js"></script>
+  <script type="text/javascript" src="controllers/modalController.js"></script>
+  <script type="text/javascript" src="directives/attack-selector.js"></script>
 
 </body>
-
 </html>
