--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <div class="footer">
     </div>
   </div>
-
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script>window.$ = window.jQuery = require('jquery');</script>
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
