cleaning up templates; add extra response field

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-ng-csp="">
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="public/node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style/style.css"/>
   <link rel="stylesheet" href="style/navbar-fixed-side.css"/>
 </head>
@@ -43,14 +43,15 @@
     <div class="footer">
     </div>
   </div>
-  <script>window.$ = window.jQuery = require('jquery');</script>
-  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-  <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
-  <script type="text/javascript" src="node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>
+  <script>window.$ = window.jQuery = require('./public/node_modules/jquery/dist/jquery.min.js');</script>
+  <script type="text/javascript" src="public/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="public/node_modules/angular/angular.js"></script>
+  <script type="text/javascript" src="public/node_modules/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="public/node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>
 
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
   <script type="text/javascript" src="public/bower_components/angular-ui-ace/ui-ace.js"></script>
+  
   <script type="text/javascript" src="public/vkBeautify/vkbeautify.js"></script>
   
   <script type="text/javascript" src="js/app.js"></script>-->
