--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <script type="text/javascript" src="public/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="public/node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="public/node_modules/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="public/node_modules/angular-sanitize/angular-sanitize.js"></script>
   <script type="text/javascript" src="public/node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>
 
   <script type="text/javascript" src="public/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
